@@ -51,6 +51,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	libesedb.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	libesedb.spec \
 	libesedb.spec.in
@@ -59,6 +62,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
