@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libesedb],
- [20150703],
+ [20150822],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -241,7 +241,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libesedb/libesedb.rc])
-AC_CONFIG_FILES([pyesedb/setup.py])
 AC_CONFIG_FILES([libesedb.pc])
 AC_CONFIG_FILES([libesedb.spec])
 dnl Have configure write its configuration
